# mili-python

./: .coveragerc  .gitignore  .gitlab-ci.yml  .project  .pydocstylerc  .venv.sh  README.md  d3samp6.plt00  d3samp6.pltA  mili_combiner_optparser.py  mili_reader_internal.py  mili_reader_lib.py  mili_reader_lib_1_0.py  mili_reader_test.py  para_mrl.py  pyproject.toml  read.py  readTest.py  requirements.txt  setup.py  tox.ini
doc/: Makefile  changelog.md  deploy_docs.py  gen_pdf_manual.sh
doc/source/: api.rst  conf.py  derived_variables.py  examples.rst  index.rst  installation.rst  manual.md  mdg_defines.rst
mili/: afileIO.py  datatypes.py  parallel.py  reader.py  versioning.py
parallel/: .d3samp6.plt007_4.17.21_12:3:7.grizhist  d3samp6.plt00000  d3samp6.plt000A  d3samp6.plt00100  d3samp6.plt001A  d3samp6.plt00200  d3samp6.plt002A  d3samp6.plt00300  d3samp6.plt003A  d3samp6.plt00400  d3samp6.plt004A  d3samp6.plt00500  d3samp6.plt005A  d3samp6.plt00600  d3samp6.plt006A  d3samp6.plt00700  d3samp6.plt007A
scripts/: mili-query.py
src/mili/: __init__.py  adjacency.py  afileIO.py  append_states.py  datatypes.py  derived.py  geometric_mesh_info.py  grizinterface.py  mdg_defines.py  milidatabase.py  miliinternal.py  parallel.py  plotting.py  postprocessing.py  reader.py  reductions.py  utils.py
src/scripts/: append_states.py  verification.py
src/tests/: __init__.py  reader_test.py  test_adjacency.py  test_afileIO.py  test_append_states.py  test_append_states_tool.py  test_bugfixes.py  test_derived.py  test_grizinterface.py  test_milidatabase.py  test_miliinternal.py  test_modify_database.py  test_reader.py  test_reductions.py  test_utils.py
src/tests/data/parallel/basic1/: basic1.plt00000  basic1.plt000A  basic1.plt00300  basic1.plt003A  basic1.plt00500  basic1.plt006A  basic1.plt00700
src/tests/data/parallel/d3samp6/: d3samp6.plt000A  d3samp6.plt002A  d3samp6.plt00300  d3samp6.plt007A
src/tests/data/serial/basic1/: basic1.pltA
src/tests/data/serial/beam_udi/: beam_udi.plt00
src/tests/data/serial/dbl_nodtang/: dblplt000A
src/tests/data/serial/dir_version_2/: dblplt2009A
src/tests/data/serial/fdamp1/: fdamp1.plt00  fdamp1.pltA
src/tests/data/serial/labeling/: dblplt00300
src/tests/data/serial/mstate/: d3samp6.plt_c02  d3samp6.plt_c03  d3samp6.plt_c08  d3samp6.plt_c100  d3samp6.plt_c11  d3samp6.plt_c12  d3samp6.plt_c13  d3samp6.plt_c14  d3samp6.plt_c15  d3samp6.plt_c16  d3samp6.plt_c17  d3samp6.plt_c19  d3samp6.plt_c22  d3samp6.plt_c28  d3samp6.plt_c31  d3samp6.plt_c35  d3samp6.plt_c36  d3samp6.plt_c39  d3samp6.plt_c42  d3samp6.plt_c45  d3samp6.plt_c46  d3samp6.plt_c49  d3samp6.plt_c53  d3samp6.plt_c60  d3samp6.plt_c61  d3samp6.plt_c62  d3samp6.plt_c63  d3samp6.plt_c65  d3samp6.plt_c66  (+14 more)
tests/: reader_test.py  test_adjacency.py  test_append_states_tool.py  test_derived.py  test_grizinterface.py  test_imports.py  test_milidatabase.py  test_miliinternal.py  test_plotting.py  test_reductions.py  test_utils.py
tests/data/parallel/: d3samp6.plt00000  d3samp6.plt003A
tests/data/parallel/basic1/: basic1.plt00100  basic1.plt001A  basic1.plt00200  basic1.plt002A  basic1.plt00400  basic1.plt004A  basic1.plt005A  basic1.plt00600  basic1.plt007A
tests/data/serial/beam_udi/: beam_udi.pltA
tests/data/serial/d3samp4/: d3samp4.pltA
tests/data/serial/dbl_nodtang/: dblplt00000
tests/data/serial/labeling/: dblplt003A
tests/data/serial/mstate/: d3samp6.plt_c00  d3samp6.plt_c01  d3samp6.plt_c04  d3samp6.plt_c05  d3samp6.plt_c06  d3samp6.plt_c07  d3samp6.plt_c09  d3samp6.plt_c10  d3samp6.plt_c18  d3samp6.plt_c20  d3samp6.plt_c21  d3samp6.plt_c23  d3samp6.plt_c24  d3samp6.plt_c25  d3samp6.plt_c26  d3samp6.plt_c27  d3samp6.plt_c29  d3samp6.plt_c30  d3samp6.plt_c32  d3samp6.plt_c33  d3samp6.plt_c34  d3samp6.plt_c37  d3samp6.plt_c38  d3samp6.plt_c40  d3samp6.plt_c41  d3samp6.plt_c43  d3samp6.plt_c44  d3samp6.plt_c47  d3samp6.plt_c48  d3samp6.plt_c50  d3samp6.plt_c51  d3samp6.plt_c52  d3samp6.plt_c54  d3samp6.plt_c55  d3samp6.plt_c56  d3samp6.plt_c57  d3samp6.plt_c58  d3samp6.plt_c59  d3samp6.plt_c64  d3samp6.plt_c69  (+19 more)
tests/data/serial/rigid_body_1/: rigid_body1.plt00  rigid_body1.pltA
tests/data/serial/solids014/: solids014_dblpltA
tests/data/serial/sstate/: v3_d3samp6.plt00
tests/data/serial/tet/: tet1_t4.pltA
tests/data/serial/vrt_BS/: vrt_BS.plt00  vrt_BS.pltA
tests/data/v3/no_tfile/: d3samp6.plt00000  d3samp6.plt000A  d3samp6.plt001A  d3samp6.plt00300  d3samp6.plt00400  d3samp6.plt00500  d3samp6.plt005A  d3samp6.plt00700  d3samp6.plt007A
tests/data/v3/parallel_t/: d3samp6.plt001A  d3samp6.plt001T  d3samp6.plt00200  d3samp6.plt002A  d3samp6.plt00300  d3samp6.plt003A  d3samp6.plt003T  d3samp6.plt00400  d3samp6.plt004A  d3samp6.plt00500  d3samp6.plt005A  d3samp6.plt006A  d3samp6.plt006T  d3samp6.plt00700
tests/data/v3/serial_t/: d3samp6.plt00  d3samp6.pltA
util/: venv.sh
(+21 files in other folders)
