[project]
  name = "mili"
  description = "modules for interacting with mili database files"
  authors = [
    "William R Tobin <tobin6@llnl.gov>",
    "Kevin Durrenberger <durrenberger1@llnl.gov>" ]
  readme = "README.md"
  requires-python = ">3.7"
  license = "LGPL-2.1-only"
  dynamic = [ "version" ]

[dependencies]
  pathos = ""
  numpy = ">1.20.0"
  coverage = ">= 4.0.0"

[build-system]
  requires = ["setuptools", "wheel", "toml"]
  build-backend = "setuptools.build_meta"