[project]
  name = "mili"
  description = "modules for interacting with mili database files"
  authors = [ { name = "William R Tobin", email = "tobin6@llnl.gov" },
  	      { name = "Ryan Hathaway", email = "hathaway6@llnl.gov" },
              { name = "Kevin Durrenberger", email = "durrenberger1@llnl.gov" } ]
  readme = "README.md"
  requires-python = ">3.7"
  license = { text = "LGPL-2.1-only" }
  dynamic = [ "dependencies", "version" ]

[dependencies]
  pathos = ""
  numpy = ">1.20.0, < 1.22"
  coverage = ">= 4.0.0"
  dill = "== 0.3.4"
  psutil = ""

[build-system]
  requires = ["setuptools", "wheel", "toml", "GitPython"]
  build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
  mymodule = ["*py.typed"]